--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "react-tiny-slider": "^1.0.6",
     "reactstrap": "^9.1.10",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
